# K-Means

./: .gitignore  CMakeLists.txt  README.md  data.csv  kmeans  kmeansParallel_final.cpp  main.cpp  notes.md  outputfile.csv
data/: test-100-5.csv  test.csv-100-5.csv
lib/: dataset.h
src/: dataset.cpp
